@@ -1,5 +1,5 @@
 from django.contrib import admin
-from shopapp.asynctask.models import TaobaoAsyncTask
+from shopapp.asynctask.models import TaobaoAsyncTask,PrintAsyncTask
 
 
 
@@ -12,3 +12,13 @@ class TaobaoAsyncTaskAdmin(admin.ModelAdmin):
 
 
 admin.site.register(TaobaoAsyncTask,TaobaoAsyncTaskAdmin)
+
+class PrintAsyncTaskAdmin(admin.ModelAdmin):
+    list_display = ('task_id','task_type','operator','created','modified','status')
+    #list_editable = ('update_time','task_type' ,'is_success','status')
+
+    list_filter = ('task_type','status')
+    search_fields = ['task_id','operator']
+
+
+admin.site.register(PrintAsyncTask,PrintAsyncTaskAdmin)
